# ClipOCR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
src/: ClipboardMonitor.cpp  ClipboardMonitor.h  Config.cpp  Config.h  GlobalHotkey.cpp  GlobalHotkey.h  HistoryManager.cpp  HistoryManager.h  ImageProcessor.cpp  ImageProcessor.h  MainWindow.cpp  MainWindow.h  OcrEngine.cpp  OcrEngine.h  SettingsDialog.cpp  SettingsDialog.h  Tray.cpp  Tray.h  main.cpp
translations/: clipocr_en.ts  clipocr_zh_CN.qm  clipocr_zh_CN.ts  translations.qrc
